# django-pwned-passwords

./: README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: test.yml
django_pwned_passwords/: password_validation.py
docs/: conf.py
example/example/: urls.py
tests/: test_password_validation.py
